# EU4SaveStats

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.py  country_colors.txt  requirements.txt  run.py  sqlite.db
.github/workflows/: build-deploy.yml
app/: __init__.py  auth_service.py  config.py  database.py  file_service.py  models.py  s3_service.py  test.py  utils.py
app/auth/: forms.py  routes.py
app/forum/: routes.py
app/friends/: routes.py
app/friends/templates/friends/: friends.html
app/main/: routes.py
app/main/templates/main/: file_details.html  index.html
app/static/css/: style.css
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/forum/: create_topic.html  forum.html  topic.html
app/templates/friends/: friends.html
app/templates/main/: file_details.html  index.html
documentation/: Design Document.docx  Project Outline.docx  ~$oject Outline.docx  ~WRL0006.tmp
rust_sqlite_playground/: Cargo.toml  app.py  sqlite.db  sqlite.db-shm  sqlite.db-wal
rust_sqlite_playground/src/: main.rs
rust_sqlite_playground/templates/: index.html
src/: auth.rs  database.rs  lib.rs  main.rs  parser.rs
stuff/: generate_country_colors.py  installs.txt  main.rs.bak  package-lock.json  package.json
templates/: file_details.html  index.html
