[package]
name = "eu4_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
eu4save = { git = "https://github.com/rakaly/eu4save.git" }
jomini = { version = "0.27.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [ "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
futures = "0.3.18"
sha2 = "0.10"