[package]
name = "eu4_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
eu4save = { git = "https://github.com/rakaly/eu4save.git" }
jomini = { version = "0.27.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.6", features = [ "attributes" ] }
futures = "0.3.18"
sha2 = "0.10"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
aws-config = "0.55"
aws-sdk-s3 = "0.28"
dotenv = "0.15"